<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnregistrementActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_perdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_perdu"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_textenregistrement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_enregistrement"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_pseudo"
                android:layout_gravity="center"
                android:gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bouton_envoyer_donnees"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_envoyer"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>